--- a/abc_comprehensivecba_answerstoreferees_secondround.tex
+++ b/abc_comprehensivecba_answerstoreferees_secondround.tex
@@ -63,15 +63,7 @@ University of Southern California}
 
 \noindent \textbf{Editor, Comment 2. Keep in mind that this is, ultimately, your paper. I very much hope that we can get by with one last round of revisions at this point. I believe this is in our mutual interest. This, obviously, depends much on you providing a dedicated revision. It should not exceed the current length by more than three pages, i.e. not exceed 42 pages, including the references.}
 
-\noindent \textbf{\textit{[JJH: We are at 43 - can we squeeze down?]}}
-
-\noindent \textbf{\textit{[JLG: We are at 43 because the document has lots of comments and clarifications by both of us. If we get rid of those, we are half-page below 42.]}}
-
 \noindent \textit{Response.} We hope so too, and think of this as the final version of our project. We have complied to the page limit that you indicated.
-
-\noindent \textbf{\textit{[JJH: Jorge - I need to see final version. I also need Appendix.]}}
-
-\noindent \textbf{\textit{[JLG: I am integrating your edits to this document, and sending you the revised final paper adding the content that you "OK" in the previous iteration. I am also noting in this document what material I added to the revised version. I also sent the original reports and the Appendix.]}}
 
 \noindent \textbf{Editor, Comment 3. I assume that the material following the references is meant to be an online appendix: please clearly indicate (and confirm) that this is so.}
 
@@ -83,54 +75,27 @@ University of Southern California}
 
 \section*{Comments of Reviewer 1}
 
+\noindent \textit{\textbf{[JLG: All of your edits to the answers to reviewer 1 were included in the revised text of today. Any edits you made to this document that applied to the paper were included in the paper.]}}
+
 \noindent \textbf{Referee 1, Comment 1. None of the children came from Raleigh, NC. All lived within 8 miles of the Frank Porter Graham Child Development Center in Chapel Hill, NC where the early education program was provided. All lived inside Orange County and were born in Memorial Hospital. (These are well-reported facts.)}
 
 \noindent \textit{Response.} We appreciate this clarification and have modified the first paragraph of Section~\ref{section:background} accordingly.
-
-\textit{\textbf{[JLG: I spoke to Peg Burchinal and to Anna (who visited the archives of the Frank Porter Graham Center) and they maintain that the most that they know about the birthplace of the children is that it was in the Research Triangle Area. None of them knew the ``well-reported fact'' that all children were born in Memorial Hospital, although Peg thinks that it is likely that most of the children did. In any event, I propose the following minor modification to the first paragraph of Section~\ref{section:background} because I don't think it's worth it to fight off the referee on this minor detail. ``The Carolina Abecedarian Project and the Carolina Approach to Responsive Education (ABC/CARE) were enriched childcare programs that targeted the early years of disadvantaged, predominately African-American children in the area of Chapel Hill, North Carolina. Appendix A describes these programs in detail. We summarize their main features here.'']}}
-
-\textit{\textbf{[JLG: I have integrated the proposed modification into the revised version.]}}
 
 \noindent \textbf{Referee 1, Comment 2. It is stated that the program ``provided health screenings to treatment-group members with costs of medication borne by parents.'' This is wrong. All children in all treatment groups received free health care (much more than ``screening'') conforming the American Academy of Pediatrics recommended schedule, and this included covering costs of medication, except if the child's family had existing health care coverage that could appropriately assume costs.}
 
 \noindent \textit{Response.} Thanks for this comment. We have further investigated the health screenings and have revised the second paragraph of Section~\ref{section:background}.
 
-\textit{\textbf{[JLG: There seems to be conflicting information between my notes of our meeting with Peg Burchinal in Chicago a long time ago and what the referee states. It was in the meeting what we had back then with Peg that she noted that the costs of medication were borne by the parents. The battery of references by Campbell, Ramey, and etc. are not careful when describing the health component of the program. I further communicated with Peg and the issue of the costs is not clear. I propose that we compromise and write the last sentence of the second paragraph of Section~\ref{section:background} as follows. ``All treatment children received medical check-ups that conformed with the American Academy. Parents were notified if children had medical issues. The first cohort of the ABC control-group received similar services \citep{Campbell_Conti_etal_2014_EarlyChildhoodInvestments,Henderson-et-al_1982_NEJoM}.'']}}
-
-\textit{\textbf{[JJH: Ok.]}}
-
-\textit{\textbf{[JLG: I have integrated the proposed modification into the revised version.]}}
-
 \noindent \textbf{Referee 1, Comment 3. The second phase of the study is described as consisting of ``home visits from ages 5 to 8." This is wrong. The actual phase 2 was a structured ``home and school resource program'' that operated from kindergarten through the entrance into third grade. The program had home visits, school visits, and summer day programs. This is much more than a home visiting program.}
 
 \noindent \textit{Response.} We appreciate this comment and acknowledge that our focus on the first phase of the program lead us to a brief and imprecise description of the second phase of the program. We have modified the description of the second phase of the program in the third paragraph of Section~\ref{section:background}.
-
-\textit{\textbf{[JLG: I think that here the referee is right. I did not pay enough attention to the description of the second phase of the program and what we wrote is incomplete. Peg recommended some sources and I propose that we amend the third paragraph of Section~\ref{section:background} as follows. (Note that Peg insists that the summer school that the referee mentions was not part of the second phase. But, again, I think that that really becomes a minor detail. The amendment that I propose should take care of the main concern that she has.) ``The design and implementation of ABC and CARE were very similar. Both had two phases, the first of which lasted from birth until age 5. In this phase, children were randomly assigned to treatment. The second phase of the study took place for the first three years of public school and supported children's academic development. It enhanced parental involvement in the education of the children. A home visit took place every two weeks and provided parents home activities to complement the skills taught at school. The visitor facilitated communication between the teachers and the parents \citep{Campbell_Ramey_1995_AERJ}. Children were assigned to this treatment through a second-stage randomization. The first phase of CARE, from birth until age 5, had an additional treatment arm of home visits designed to improve home environments.'']}}  
-
-\textit{\textbf{[JJH: Ok.]}}
-
-\textit{\textbf{[JLG: I have integrated the proposed modification into the revised version.]}}
 
 \noindent \textbf{Referee 1, Comment 4. Authors state ``data were collected annually on cognitive and social-emotional skills…'' This simplifies incorrectly. The common data collection (there were minor variations not worthy of mention for this paper) were at 6 month intervals through age 5 (60 mos.), then at age 6 and next on to the ages 8, 12, 15, and 30 already mentioned in the next sentence. Since this is not ``annual" the sentence should be corrected - and there are not 7 year old data. This is minor, but an example for careless characterization of the study, given the tremendous emphasis on details about computing social efficiency overall. Another example of carelessness in description of methodology is the statement that additional information was collected ``from a physician-administered medical survey, when the subjects were in their mid-30s.'' In fact, there was an in-person set of assessments, included collection of bio specimens and measurements. This is not a survey. Statement should be corrected to correspond to what occurred, especially since health outcomes based on this one-time assessment are incorporated in the forecasting models.} 
 
 \noindent \textit{Response.} This comment is very useful because we were incorrectly simplifying the data collection. We have modified the last paragraph of Section~\ref{section:background} accordingly.
 
-\textit{\textbf{[JLG: As the referee herself says, we oversimplified here and we should probably avoid details. I propose the following modification to the las paragraph of Section~\ref{section:background}. ``For both programs, data were frequently collected on cognitive and socio-emotional skills, home environments, family structure, and family economic characteristics from birth until age 8. Further follow-ups were collected at ages 12, 15, 21, and 30. In addition, there is information from administrative criminal records, and from a full in-person medical assessment that included a survey and collection of bio specimens and measurements when the subjects were in their mid30s. Appendix~\ref{appendix:data} provides exact details on the timing of the difference data collections. Many control-group children in both ABC and CARE attended alternative formal childcare arrangements (75\% and 74\%, respectively).'']}} 
-
-\textit{\textbf{[JJH: We should be precise.]}}
-
-\textit{\textbf{[JLG: I have integrated the proposed modification and references Appendix~\ref{appendix:data}. There we state precisely when each piece of data was collected.]}}
-
 \noindent \textbf{Referee 1, Comment 5. I strongly recommend that the authors modify their simplification of the ABC/CARE intervention as mostly just free high-quality childcare for more than 9 hrs/day, 50 wks/yr is seriously misleading. At the very least, the authors should add several words that capture that this was ``an enriched, educationally focused child care center program'' or ``an early educational intervention in a high-quality child care center'' (which had a curriculum and active supervision of care providers and licensed teachers - informed by scientific knowledge at that time about how infants, toddlers, and young children learn. Why this is important is that many policymakers and economists may naively think that this is equal to subsidized child care in our country. This would be a misleading interpretation for what this paper shows - beyond demonstrating how to compute models of lifelong benefits. That is, this article serves two purposes: one is the proposal of how to calculate benefits from interventions and the other is the particular benefits of these two combined programs. The article needs to be informative and scientifically accurate on both purposes.}
 
 \noindent \textit{Response.} We appreciate this point and have modified the second paragraph of Section~\ref{section:background} accordingly.
-
-\textit{\textbf{[JLG: While this point feels mainly semantic, I propose that we slightly modify the second paragraph of Section~\ref{section:background} to the following. ``These programs went beyond regular care. They were high-quality, educationally-focused child care centers. Their goal was to enhance the life skills of disadvantaged children. They supported language, motor, and cognitive development as well as socio-emotional competencies considered crucial for school success including task orientation, the ability to communicate, independence, and pro-social behavior. They also provided free health screenings to treatment-group members with costs of medications borne by the parents.'']}}
-
-\textit{\textbf{[JJH: Isn't this inflaming things (referring to the last sentence).]}}
-
-\textit{\textbf{[JLG: Yes. I have integrated the proposed modification without the last sentence, which I amended to be consistent with comment 2 of this same referee.]}}
-
 
 \section*{Comments of Reviewer 2}
 
@@ -152,21 +117,15 @@ supp( \bm{Y}_{e,a}^1, \bm{X}^1_{e,a}, \bm{B}_e, \bm{\varepsilon}_{e,a} ) \subset
 supp( \bm{Y}_{e,a}^1, \bm{X}^1_{e,a}, \bm{B}_e, \bm{\varepsilon}_{e,a} ) \subseteq supp( \bm{Y}_{e,a}^d, \bm{X}^d_{e,a}, \bm{B}_e, \bm{\varepsilon}_{e,a} ).  \label{eq:ref3}
 \end{equation}
 
-\noindent \textit{Response.} It is right that we do not observe $\bm{X}_{k,a}^1$ for $k = n$. However, we seek to construct counterfactuals in the ``e'' sample and do require this condition to do so. In our paper, we estimate $\phi_{k,a}^d \left( \cdot, \cdot \right)$ in Equation~\eqref{eq:outcome}. Thus, we need to guarantee that the sample that we used to estimate the function covers the support of the arguments of these functions. Thus, the support of the inputs and the background variables in the productions functions in the non-experimental sample needs to be ample enough to cover all realized values of the arguments in the experimental data. We document that this holds in Appendix~\ref{app:containsupport}. 
+\noindent \textit{Response.} It is correct that we do not observe $\bm{X}_{k,a}^1$ for $k = n$. However, we seek to construct counterfactuals in the ``$e$'' sample and do require this condition to do so. In our paper, we estimate $\bm{\phi}_{k,a}^d \left( \cdot, \cdot \right)$ in Equation~\eqref{eq:outcome} of the main text. We need to guarantee that the sample that we use to estimate the function covers the support of the arguments of these functions. Thus, the support of the inputs and the background variables in the productions functions in the non-experimental sample needs to be ample enough to cover all realized values of the arguments in the experimental data. We document that this holds in Appendix~\ref{app:containsupport}. 
 
-There is a typo in Equation~\eqref{eq:ref1}: the right- and the left-hand side of the equations are the exact same. Equation~\eqref{eq:ref2} is not really a support condition of our interest. We are not trying to use the control-group in the experimental sample to forecast in the treatment-group in the experimental sample, which the referee requests that we do. Similarly for what the referee writes in Equation~\eqref{eq:ref3}. A way to understand our assumption, however, is that we are using the non-experimental sample, which given the absence of treatment is a control group, to forecast in the experimental sample and thus we require
+There is a typo in the referee's Equation~\eqref{eq:ref1}: the right- and the left-hand side of the equations are the exact same. Equation~\eqref{eq:ref2} is not really a support condition of interest. We are not trying to use the control group in the experimental sample to forecast in the treatment group in the experimental sample, which the referee requests that we do. A similar remark applies regarding the comments of the referee in Equation~\eqref{eq:ref3}. A way to understand our assumption is that we are using the non-experimental sample---which given the absence of treatment is a control group---to forecast in the experimental sample and thus we require
 
 \begin{equation}
 supp( \bm{Y}_{e,a}^d, \bm{X}^d_{e,a}, \bm{B}_e, \bm{\varepsilon}_{e,a} ) \subseteq supp( \bm{Y}_{n,a}^0, \bm{X}^0_{n,a}, \bm{B}_n, \bm{\varepsilon}_{n,a} ).  \label{eq:ref4},
 \end{equation}
 
 which holds as a direct consequence of Assumption~\ref{ass:contain}. 
-
-\textbf{\textit{[JJH: Let's reword so we explain why text material is correct.]}}
-
-\textbf{\textit{[JLG: I have reworded the answer. I do feel that it is important (for the editor's reading) to point out that the equations that the referee stated in the report are wrong.]}}
-
-\textbf{\textit{[JJH: Agreed.]}}
 
 \noindent \textbf{Referee 2, Comment 2. [\ldots] It feels that this is more complicated than it needs to be. For example, I don't understand why you need to distinguish between $\bm{\phi}_{k,a}^d \left( \cdot, \cdot \right) $ and $\bm{\varepsilon}_{k,a}^d$. You motivate this with the conditional mean $\Delta_a$ so if I focus on identifying that, one needs to identify}
 
@@ -182,73 +141,49 @@ which holds as a direct consequence of Assumption~\ref{ass:contain}.
 
 \textbf{which seems to be implied by Assumptions~\ref{ass:summary} to \ref{ass:exog}. The second is the support condition Assumption~\ref{ass:contain}. Why not presenting it this way? Am I missing something?}
 
-\noindent \textit{Response.} We find it clarifying to distinguish the components of the technology arising from observables from the components due to unobservables. Note also that including $\bm{\varepsilon}_{k,a}^d$ in the invariance assumption provides us with additional implications that we test. However, you are perfectly correct that if we are only interested in means Equation~\eqref{eq:ref4} suffices. Thank you for the point. Note, however, that as it stands the $\bm{X}_{k,a}^d$ are not exogenous. We can fix arguments. This is stronger than taking means. For the unobservables, we can only specify means.
-
-Assumption~\ref{ass:summary} states and clarifies the economic content that implies Equation~\eqref{eq:ref4}. We pose the assumption and derive the implications in Equations~\eqref{eq:suff1},~\eqref{eq:suff2}, and~\eqref{eq:nec},  which include Equations~\eqref{eq:ref4}. 
-
-The analogous answer applies for the case of identifying distributions, as opposed to conditional means (as the referee points out).
+\noindent \textit{Response.} Assumption~\ref{ass:summary} states and clarifies the economic content that implies Equation~\eqref{eq:ref4}. We present the assumption and derive the implications in Equations~\eqref{eq:suff1},~\eqref{eq:suff2}, and~\eqref{eq:nec},  which include Equations~\eqref{eq:ref4}. However, we find it clarifying to distinguish the components of the technology arising from observables from the components due to unobservables. Note also that including $\bm{\varepsilon}_{k,a}^d$ in the invariance assumption provides us with additional implications that we test. The analysis as presented generated testable implications which we test and plead to keep them in the text.
 
 \noindent \textbf{Referee 2, Comment 3. It seems like we need some assumption about $\bm{X}_{e,a}^d$. In general, if Assumptions~\ref{ass:summary} to \ref{ass:exog} hold but I want to identify $\mathbb{E} \left[ \bm{Y}_{e,a} | \bm{B} \in \mathcal{B}_0 \right]$ for $a^* < a$, I typically won't observe $\bm{X}_{e,a}^d$ in the data but if I can't observe $\bm{X}_{e,a}^d$ why is exogeneity useful? Thus it seems that for identification we need an additional assumption about identification of $\bm{X}_{e,a}^d$. It seems like essentially just assuming $G_{e,a}^d \left( \bm{x} \right)$ is identified in my example above.} 
 
-\noindent \textit{Response.} We assume that the referee means ``observation of $\bm{X}_{e,a}^d$'' rather than ``identification.'' We address observation under or support assumption (Assumption~\ref{ass:contain}). \textbf{Step 3} in Section~\ref{sec:forecasting} explains and justifies the inputs that we use. The inputs that generate future values need to be available in the non-experimental sample and generate outcomes in an invariant technology. 
+\noindent \textit{Response.} We assume that the referee means ``observation of $\bm{X}_{e,a}^d$'' rather than ``identification.'' We address this point with our support assumption (Assumption~\ref{ass:contain}). \textbf{Step 3} in Section~\ref{sec:forecasting} explains and justifies the inputs that we use. The inputs that generate future values need to be available in the non-experimental sample and are used to generate outcomes through an invariant technology. 
 
 \section*{Comments of Reviewer 3}
 
 \noindent \textbf{Referee 3, Comment 1. A key assumption is that the mapping between predictors and outcomes to be constant across children, parents, and grand-children, once you control for background variables. Can't this assumption be relaxed to allow for interactions between cohort and predictors/outcomes in a parametric/restrictive way? For example, I suppose you could allow for say a (e.g. linear) trend between cohort of birth and these variables. Can data be informative about how one would specify such a trend?}
 
-\noindent \textit{Response.} We only make this assumption for one generation. Our model is not necessarily an OLG model. Indeed, we can allow for general conditioning given support conditions. We do not implement this in our analysis because the choices of $\bm{X}_{k,a}^d$ and $\bm{B}_k$ imply that, empirically, we cannot reject that Assumption~\ref{ass:summary} holds. We clarify this in a footnote when stating Assumption~\ref{ass:summary}.
-
-\textit{\textbf{[JLG: I suggest adding the following footnote at the end of the statement of Assumption~\ref{ass:summary}. ``This assumption could be generalized to hold conditionally on any set of covariates. For example, one could think of structural invariance conditional on linear or polynomial time trends.'']}}
-
-\textit{\textbf{[JJH: This seems to wander from question.]}}
-
-\textit{\textbf{[JLG: I shortened the answer based on your suggestion and wrote implemented the proposed footnote at the end of  Assumption~\ref{ass:summary}.]}}
+\noindent \textit{Response.} We only make the assumption of invariance for one generation. Our model is not necessarily an OLG model. In addition, we can allow for general conditioning on covariates but we need to satisfy support conditions. For example, we can allow for polynomial age or work-experience trends. In our application, we test and do not reject invariance without doing so.
 
 \noindent \textbf{Referee 3, Comment 2. I didn't fully understand your response to my question of cross-equation restrictions. I understand you use multiple data sets, but it seems to be that there is more than one outcome per data set. Using such restrictions should not only improve efficiency but it would also be important in terms of interpreting the results.} 
 
-\noindent \textit{Response.} Your point is a good one in general. Cross-equation restrictions improve efficiency. Let us clarify that we forecast each of the outcomes in Figure~\ref{figure:main} using different datasets. Our paper explains the datasets for each outcome. In terms of implementing the strategy, the ``only'' benefit from imposing cross-equation restrictions is to produce additional testable implications as well as efficiency. We clarify that these restrictions can be worked out when stating Assumption~\ref{ass:summary}. As we state above, in our case this are not practical because different outcomes come from different datasets. 
-
-\textit{\textbf{[JLG: I suggest adding the following footnote at the end of the statement of Assumption~\ref{ass:summary}. ``In addition, cross-equation structural invariance restrictions could in principle be imposed across outcomes. This is not possible in our case because data for forecasting each of our outcomes come from different sources. Researchers interested in applying this method to contexts where the data used to forecast provides several outcomes could include cross-equation restrictions in the testable implications that we derive from Assumption~\ref{ass:summary}.'']}} 
-
-\textit{\textbf{[JLG: I have integrated the proposed modification, with your edits included.]}}
-
-\textit{\textbf{[JJH: I reedited.]}}
-
-\textit{\textbf{[JLG: Your edit is included now in the revised paper and the modified footnote pasted above for reference.]}}
+\noindent \textit{Response.} Your point is a good general point. Cross-equation restrictions improve efficiency. Let us clarify that we forecast each of the outcomes in Figure~\ref{figure:main} using different datasets. Our paper explains the datasets used for each outcome. In terms of implementing our  strategy, the benefit from imposing cross-equation restrictions is to produce additional testable implications as well as efficiency. We now clarify that these restrictions can be imposed when stating Assumption~\ref{ass:summary}. As we state above, in our case it is not possible to do so because different outcomes come from different datasets. 
 
 \noindent \textbf{Referee 3, Comment 3. Are the gains in labor income concentrated among those whose health improved? Presumably, the policymakers care about how the joint distributions change. If the paper is supposed to be a template, it would be useful to know how the authors would suggest other researchers could incorporate such restrictions in future work.}
 
-\noindent \textit{Response.} We agree that such distributional analyses would be informative. However, our capacity to estimate joint distributions of outcomes is restricted by the small sizes of our samples. This precludes credible estimation of joint distributions giving rise to heterogeneity in outcomes. This also relates to the difficulty for us to analyze essential heterogeneity, as you suggested in the previous revision.
+\noindent \textit{Response.} We agree that such distributional analyses would be informative. However, our capacity to estimate joint distributions of outcomes is restricted by the small sizes of our samples. This consideration precludes credible estimation of joint distributions giving rise to heterogeneity in outcomes. This also relates to the difficulty for us to analyze essential heterogeneity, as you suggested in the previous revision.
 
 \noindent \textbf{Referee 3, Comment 4. I am still confused why one needs a randomized experiment if one is willing to make the assumptions you invoke. Under your assumptions, what is so special about experimentally induced variation in inputs. Any variation would do, including observational variation, right? Put differently, suppose you want to use your framework in a setting with only observational variation in inputs. Would I need to change or modify any assumptions? If not, I don't see what role the experiment per se plays.}
 
-\noindent \textit{Response.} Your point is dead-on. But the experiment allows us to test exogeneity rather than impose it. Assumption~\ref{ass:exog} allows us to identify and estimate production functions in the non-experimental samples when both the outputs and the inputs are observed. Assumption~\ref{ass:summary} states that the production functions are identical across experimental and non-experimental samples (and provides testable implications derived from this). The experiment is also crucial to our procedure because it sets the treatment-control difference in the outcomes of interest through the experimentally-induced changes in the inputs that we use to forecast. This is what many policy changes would do. The experiment gives us a policy-relevant exogenous change in the inputs. It fixes the goal of the analysis in the non-experimental sample. It defines de policy.
+\noindent \textit{Response.} Your point is dead-on. But note that the experiment allows us to test exogeneity rather than impose it. Assumption~\ref{ass:exog} allows us to identify and estimate production functions in the non-experimental samples when both the outputs and the inputs are observed. Assumption~\ref{ass:summary} states that the production functions are identical across experimental and non-experimental samples (and provides testable implications derived from this). The experiment is also crucial to our procedure because it sets the treatment-control difference in the outcomes of interest through the experimentally-induced changes in the inputs that we use to forecast. This is what many policy changes would do. The experiment gives us a policy-relevant exogenous change in the inputs. It fixes the goal of the analysis in the non-experimental sample.
 
 \noindent \textbf{Referee 3, Comment 5. The authors conclude with the cautionary note that the program they study was targeted to a disadvantaged. Related to this point, the authors may want to emphasize the homogeneity assumption underlying their forecast exercise. At least in other settings, one would expect there to be considerable heterogeneity in effects even among observationally equivalent children and parents.}
 
 \noindent \textit{Response.} This is a good point that we have added to the cautionary note of the conclusion.
 
-\textit{\textbf{[JLG: I propose that we change the third paragraph of Section~\ref{section:conclusion} to the following. ``We conclude with a cautionary note. The program we study was targeted to a relatively homogenous, disadvantaged, predominately African-American population in a university town in North Carolina. Blind generalization of our findings to other populations is clearly not warranted. In particular, there is no support in this study for universal application of ABC/CARE across all socio-economic groups which could exhibit vastly heterogenous returns to high-quality early childhood education.'']}}
-
-\textit{\textbf{[JLG: I have integrated the proposed modification, with your edits included.]}}
-
 \section*{Comments of Reviewer 4}
 
 \noindent \textbf{Referee 4, Comment 1. Table 4 contains estimates for an impressive array of variations on the authors' methodology, but (as I understand it) these estimates all use the authors' forecasting technology applied to their current data set to construct production functions, but vary the outcomes included in the cost/benefit calculation (e.g., ignoring gains for outcomes that occur past age 21 or age 30, or outcomes in a particular domain).}
 
-\noindent \textit{Response. Before responding to your points, we agree that your understanding of this part is correct.}
+\noindent \textit{Response.} We agree that your understanding of this part is correct.
  
 \noindent \textbf{Referee 4, Comment 2. An alternative form of robustness is to ask what would have happened if the authors had not had access to experimental data through age 30. Suppose they deleted all information in the Abecedarian data set observed after some earlier age, and conducted the projection exercise on the remaining data. What would the estimated rates of return look like? Another way of stating this question: what answers would the authors have reported if forced to write this paper 5, 10, 15, or 20 years ago, using the same projection methodology they developed for the current version? Robustness of the estimates to different possible followup windows would give readers a lot of confidence regarding the authors' results based on the data that happens to be available today. On the other hand, showing that the estimates would have been inaccurate before a particular date would be helpful for researchers interpreting results from more recent evaluations where less time has elapsed since treatment.}
 
 \noindent \textit{Response.} We agree. Your suggested exercise is interesting. We have a small number of inputs, given the choice of inputs that we justify in \textbf{Step 3} in Section~\ref{sec:forecasting}. However, based on the points that you raised, we created additional material for Section~\ref{section:bcaestimates}. That material assesses the general point that you make in your report. We reproduce it next for your convenience. 
 
-\textit{\textbf{[JLG: The referee stated his one point in various ways. I think that his point is of value and created the following material that I propose to add at the end of our current Section~\ref{section:bcaestimates}.]}}
+\noindent \textbf{\textit{[JJH: We need to state our response in this document---see my edits to Section~\ref{section:bcaestimates}].}}
 
-\textit{\textbf{[JLG: The material proposed is now in the revised paper, with your edits included.]}}
+\noindent \textbf{\textit{[JLG: Ok. I propose that we converge in the material in the main text and then present it here to answer to the referee. That way you do not have to edit two documents with the same stuff.]}}
 
-\textit{\textbf{[JJH: Where in Section~\ref{section:bcaestimates}.]}}
 
-\textit{\textbf{[JLG: All the changes are flagged in the revised version now.]}}
 
 %References
 \singlespace
